# OpenHash

./: .gitignore  CMakeLists.txt  README.md  results.csv  results_threaded.csv
benchmark/: benchmark.cpp  hierarchy.cpp
data/: final_results.csv  final_results_threaded.csv  heirarchy_results.csv  results.csv  results_hierarchy.csv  results_threaded.csv
src/: arena.hpp  kv_store.hpp  kv_store_arena.hpp  kv_store_open.hpp  locked_store.hpp  sharded_store.hpp
tests/: test.cpp
utils/: plot.py  run_matrix.sh
